--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
 
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Goit-10</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+<body>
+  <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+
+  <main>
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <header class="header">
+        <div class="container">
+          <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-item">
+                <a class="nav-link {=$highlight-act}" href="./1-timer.html">Goit-10-timer</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {=$highlight-curr}" href="./2-snackbar.html">Goit-10-snackbar</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
     </main>
+  </main>
 
-    <load src="./partials/footer.html" />
+  <script type="module" src="./js/1-timer.js"></script>
+  <script type="module" src="./js/2-snackbar.js"></script>
+</body>
 
-    <script type="module" src="./main.js"></script>
-  </body>
 </html>
