--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
   <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
 
-  <main>
+  
     <main>
       <header class="header">
         <div class="container">
@@ -29,10 +29,9 @@
         </div>
       </header>
     </main>
-  </main>
 
-  <script type="module" src="./js/1-timer.js"></script>
-  <script type="module" src="./js/2-snackbar.js"></script>
+  <!-- <script type="module" src="./js/1-timer.js"></script>
+  <script type="module" src="./js/2-snackbar.js"></script> -->
 </body>
 
 </html>
